--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -6,9 +6,14 @@
     @import 방식으로 외부파일을 불러와 합치면 html파일에서 link방식으로 불러올 필요가 없다!
     > 웹요청(httprequest)이 줄어들어 html의 랜더링 속도가 향상된다.
  */
- 
+
 .sub-title{
     font-size: 50px;
     color: red;
 
+}
+.article-exp{
+    text-align: center;
+    color: rgb(203, 203, 203);
+    font-size: 15px;
 }
