3일차 백그라운드이미지
- 각 메뉴마다 다르게 이미지를 넣음.
- 백그라운드 이미지에 대한 간단 설명

--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -65,9 +65,14 @@
             text-align: center;
         }
 
+        .tit{
+            font-weight: lighter;
+            font-family: "Black Han Sans", sans-serif;
+            font-size: 40px;
+        }
+
         #top-area{
             background-color: #c7ffd4;
-            font-family: "Noto Sans KR", sans-serif;
         }
 
         #info-area{            
