서브타이틀 글씨색 변경

--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -69,10 +69,11 @@
             font-weight: lighter;
             font-family: "Black Han Sans", sans-serif;
             font-size: 40px;
+            color: white;
         }
 
         #top-area{
-            background-color: #c7ffd4;
+            background-color: #00c604;
         }
 
         #info-area{            
