--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -1,3 +1,8 @@
+@charset "utf-8";
+/* 맨위에 인코딩 설정 필수 
+    - 외부CSS파일은 파일 자체적으로 처리되므로 인코딩형식도 따로 지정해야한다*/
+
+
 /* info PJ 공통 CSS = common.css */
 
 
@@ -68,12 +73,14 @@
         .tit{
             font-weight: lighter;
             font-family: "Black Han Sans", sans-serif;
-            font-size: 40px;
+            font-size: 50px;
             color: white;
+            margin: auto;
         }
 
         #top-area{
             background-color: #00c604;
+            padding: 40px;
         }
 
         #info-area{            
