HTML 인용관련 요소

--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -35,7 +35,18 @@
             (세로)
             모든요소에서 기본값은 내용물 만큼
             안주면 기본값 auto로 설정*/
-            width: 750px;
+
+
+            /* width: 750px;
+            최대 가로크기로 유동적인 사이즈 만들기 */
+            max-width: 1000px;
+            /* 최대크기 1000px을 유지하다가 화면 또는 부모박스가 이 크기보다 작아지면
+            자동으로 auto로 전환되어 가로 스크롤바가 안생기고 크기가 화면에 적응된다 */
+
+            
+
+
+
             /* height: 300px; */
             /* height: auto; */
             border: 4px double #14a72c;
