제목 마진 조금 수정
중앙을 마치고 싶어서 야매로 함

--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -86,7 +86,8 @@
             font-family: "Black Han Sans", sans-serif;
             font-size: 50px;
             color: white;
-            margin: auto;
+            /* margin: auto; */
+            margin: 17px auto auto;
         }
 
         #top-area{
