--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -11,6 +11,7 @@
  /* 서브페이지 글씨체 지정 */
 #main-area{
     font-family: "Noto Sans KR", sans-serif;
+    text-align: justify;
 }
 /* 서브페이지 타이틀 */
 h2.sub-title {
@@ -170,6 +171,7 @@ h2.sub-title {
   border-top: 2px dashed #ccc;
   border-bottom: 2px dashed #ccc;
   margin: 20px 0;
+  padding: 15px 0;
 }
 
 /* 인용구 제목 */
@@ -190,4 +192,34 @@ h2.sub-title {
       box-shadow: inset x축이동 y축이동 블러 그림자크기(spread) 색;*/
   /* box-shadow: 4px 4px 5px 10px #888; */
   box-shadow: inset 0 0 20px #888;
+
+  margin: 0;
+}
+
+/* 블록인용박스 */
+.quote-box blockquote{
+  margin: 0;
+  font-size: 15px;
+  line-height: 2.1;
+
+  /* 양쪽정렬 */
+  text-align: justify;
+
+  /* 자식요소인 이미지에 float 속성을 사용할 경우 부모박스에서 자식요소를 인식하지 못하는 경우 발생
+  -> 이것으 해결하기 위한 한 가지 방법으로 = 넘치는 요소 숨기기 속성 사용 */
+  overflow: hidden;
+
+  padding: 5px 5px 5px 0;
+}
+
+/* 블록인용이미지 */
+.quote-box img{
+  /* 글자가 올라와서 흘러가게 하려면 = float속성 사용
+    1. float: left - 이미지는 왼쪽, 글자는 오른쪽
+    2. float: right - 이미지는 오른쪽, 글자는 왼쪽 */
+    float: right;
+    margin-left: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px #555;
+    margin-top: 10px;
 }
