동영상 삽입
+ 비율유지박스 설정

--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -166,16 +166,16 @@ h2.sub-title {
 }
 
 
-/* 인용구박스 */
-.quote-box{
+/* 구분 박스 공동 */
+.bd-box{
   border-top: 2px dashed #ccc;
   border-bottom: 2px dashed #ccc;
   margin: 20px 0;
   padding: 15px 0;
 }
 
-/* 인용구 제목 */
-.quote-box h4{
+/* 구분박스 제목 */
+.bd-box h4{
   /* 기본 display가 block이어서 글씨만큼 크기를 가지려면 inline-block으로 바꿔야한다  */
   display: inline-block;
   font-size: 20px;
@@ -222,4 +222,23 @@ h2.sub-title {
     border-radius: 10px;
     box-shadow: 0 0 5px #555;
     margin-top: 10px;
+}
+
+/* 동영상 박스 : 유튜브 iframe */
+.mvbox{
+  /* 비율유지박스설정 
+  aspect-ratio : 가로비/세로비
+    주의 : 가로 세로가 유동적임으로 특정값을 세팅하지 말 것.
+  */
+  aspect-ratio: 16/9;
+
+  /* height: 550px; */
+
+}
+
+/* iframe */
+.mvbox iframe{
+  border: none;
+  width: 100%;
+  height: 100%;
 }
