--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -242,3 +242,34 @@ h2.sub-title {
   width: 100%;
   height: 100%;
 }
+
+/* 기사원문 */
+.article-link{
+  text-align: right;
+}
+
+/* 기사원문 a요소 */
+.article-link a{
+  /* 부모박스 인라인 정렬도 가능하고 크기디자인도 적용되는 display */
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 1px solid green;
+  border-radius: 50%; /* 정원 */
+  text-align: center;
+  line-height: 100px;/* 줄간격을 높이값과 같이 주면 세로중앙 */
+  font-size: 20px;
+  
+  /* a요소 기본 글자색 변경 / 밑줄없앰 */
+  color: #222;
+  text-decoration: none;
+  
+  background-color: #ccc;
+}
+
+/* 기사원문 a요소 마우스오버시 */
+.article-link a:hover{
+  color: #ffffff;
+  background-color: #00c604;
+  box-shadow: 0 0 10px 5px green;
+}
