인트로 사이트 건드리다가 말았음...

--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -273,3 +273,11 @@ h2.sub-title {
   background-color: #00c604;
   box-shadow: 0 0 10px 5px green;
 }
+
+.work{
+  text-align: center;
+  background-color: #fffebf;
+  width: 100%;
+  height: 100%;
+  
+}
