--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -275,9 +275,47 @@ h2.sub-title {
 }
 
 .work{
+  /* 글자크기, 정렬은 자식요소로 상속됨 */
   text-align: center;
-  background-color: #fffebf;
-  width: 100%;
-  height: 100%;
+
+  /* 그라데이션 
+    [선형 그라이데이션 : linear-gradient ]
+      linear-gradien(방향, 색1, 색2,.....
+      linear-gradien(방향, 색1 몇%, 색2 몇%....
+      linear-gradien(각도, 색1 몇%, 색2 몇%...
+      -옵션:
+        1. 방향 : to top, to bottom, to left, to right
+        2. 각도 : 각도deg
+        3. 콤마로 나열된 색상 뒤에 %수치를 쓰면 비율조정가능
+  */
+  /* background-image: 
+  linear-gradient(45deg, red 5%, yellow 20%, yellow 80%,blue);
+  background-color: #fffebf; */
   
+  background-image: 
+  linear-gradient(45deg, rgb(239, 202, 255) 10%, rgb(255, 246, 185) 50%, rgb(123, 106, 251) 90%);
+
+  padding: 1px;
+  /* 
+  부모박스에 패딩이 없는 상태에서,
+  첫번째 자식 블록박스의 마진은 부모 바깥쪽으로 나가서 세팅된다.
+  이유 : 마진은 바깥쪽으로 세팅하는 개념이고, 부모가 이를 새팅하지 않았다면
+        첫번째 블록박스에서 마진을 세팅할 수 있도록 기본 설계되어있다.
+
+  -> 패딩을 주는 순간 자식의 마진은 패딩의 내부공간을 맡게된다.
+  */
+}
+
+/* 작품 타이틀 */
+.work h4{
+  font-family: "Black And White Picture", system-ui;
+  font-weight: normal;
+  font-size: 28px;
+  color: #333;
+
+  margin: 0;
+  /* 부모에 패딩없는 상태에서 첫번째 자식 마진은 부모바깥으로 나감.
+    참고) 마지막 자식블록요소도 부모박스 하단 마진은 바깥으로 나감.
+  */
+
 }
