--- a/001. HTML학습/02. Info_PJ/CSS/common.css
+++ b/001. HTML학습/02. Info_PJ/CSS/common.css
@@ -7,12 +7,13 @@
 
 
         /* 웹폰트 구글 CDN */
-        @import url('https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Gugi&family=Black+And+White+Picture&family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&display=swap');
 
         /* 폰트
           font-family: "Black And White Picture", system-ui;
           font-family: "Black Han Sans", sans-serif;
           font-family: "Noto Sans KR", sans-serif;
+          font-family: "Gugi", sans-serif;
         */
 
         /* CSS코딩 구역 
