--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -8,8 +8,9 @@ html,body{
     height: 100%;
 }
 body{
-    background: url('../images/Intro_bg.jpg') no-repeat 50% top/100%;
-    background-size: auto 100%;
+    background: url('../images/Intro_bg.jpg') no-repeat center/100%;
+    background-size: cover;
+    
     /* background-image: 
     linear-gradient(to bottom,rgb(98, 200, 244),rgb(217, 239, 242)); */
 
@@ -27,6 +28,33 @@ body{
     background-color: #ffffff94;
 }
 
+/* --------------------------------------------------------------------------------------------- */
+
+
+/* .wrap{
+    width: 450px;
+    height: 100%;
+    margin-top: 100px;
+    box-sizing: border-box;
+    text-align: right;
+    background-color: burlywood;
+    padding-top: 10px;
+    position: fixed;
+    padding-right: 20px;
+    right: 0px;
+
+}
+
+.wrap h1{
+    font-size: 40px;
+}
+.wrap h2{
+    font-size: 30px;
+} */
+
+/* 마우스오버시 이쁘게 하는거랑 디자인.더 하기.. */
+
+/* --------------------------------------------------------------------------------------------- */
 
 /* html,body{
     margin: 0;
