--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -2,6 +2,12 @@
 
 /* 인트로사이트 메인 CSS - main.css */
 
+/* 스크롤 애니메이션 세팅 */
+html{
+    scroll-behavior: smooth;
+    /* html 즉, 루트에 부드러운 스크롤 설정을 하면 이동시 스크롤 애니메이션이 연출됨 */
+}
+
 html,body,h1,h2,h3,p{
     margin: 0;
     padding: 0;
