정치쪽 "기사를 추천해요!"
버튼 활성화 하고 싶음...js건들어볼것

--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -565,3 +565,17 @@ h2.sub-title {
 
     line-height: 1.5;
   }
+
+  .recom-box table{
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .recom-box td{
+    width: 100px;
+  }
+  .recom-box tr:first-child{
+    font-size: 23px;
+ 
+  }
