정치뉴스 건드리는중

--- a/001. HTML학습/02. Info_PJ/CSS/sub.css
+++ b/001. HTML학습/02. Info_PJ/CSS/sub.css
@@ -566,6 +566,9 @@ h2.sub-title {
     line-height: 1.5;
   }
 
+  .recom-box{
+    /* display: inline-block; */
+  }
   .recom-box table{
     max-width: 600px;
     margin: 0 auto;
@@ -579,3 +582,14 @@ h2.sub-title {
     font-size: 23px;
  
   }
+
+.recom-box a{
+  display: block;
+  text-align: center;
+  background-color: #e9e9e9;
+  margin-top: 50px;
+}
+.news-home span{
+  color: #39ab4e;
+}
+
