--- a/900.인트로사이트/css/main.css
+++ b/900.인트로사이트/css/main.css
@@ -8,9 +8,12 @@ html{
     /* html 즉, 루트에 부드러운 스크롤 설정을 하면 클릭하여 이동시 스크롤 애니메이션이 연출됨 */
 }
 
-html,body,h1,h2,h3,p{
+html,body,h1,h2,h3,p,ul,ol{
     margin: 0;
     padding: 0;
+}
+ul,ol{
+    list-style: none;
 }
 
 html,body,.page{
@@ -18,7 +21,7 @@ html,body,.page{
     height: 100%;
 }
 
-body{
+#pg1{
     background: url('../images/Intro_bg.jpg') no-repeat fixed center/cover;
     /* background-size: cover; */
     
@@ -29,7 +32,23 @@ body{
     linear-gradient(방향, 색1,색2,색3,...);
     - 방향 to top,to left... */
 }
+#pg2{
+    background: url('../images/Intro_bg_2.jpg') no-repeat fixed center/cover;
+}
 
+/* 상단영역 */
+.top-area{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #ffffff66;
+    padding: 20px 0;
+    z-index: 999;
+}
+/* 로고박스 */
+.logo{
+    text-align: center;
+}
 
 /* 메뉴박스 */
 .menu{
@@ -40,12 +59,40 @@ body{
     
     /* text-align: center; */
 }
-.menu>*{
-    display: inline-block;
+.menu ul::after{
+    content: '';
+    display: block;
+    clear: both;
 }
+
+/* 각 리스트 */
+.menu li{
+    /* 블록요소 옆으로 흐르게 */
+    float: left;
+    width: 50%;
+    text-align: center;
+    font-size: 30px;
+}
+
+.menu a{
+    text-decoration: none;
+    color: #222;
+
+}
+.menu a:hover{
+
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    color: #f8c026;
+
+}
+
 
 /* 컨텐츠 박스 */
 .link-box{
+    position: relative;
+    top: 40%;
+
     border: 2px dashed darkblue;
     border-radius: 20px;
     width: 600px;
@@ -53,6 +100,7 @@ body{
     padding: 20px;
     text-align: center;
     background-color: #ffffff94;
+
 }
 
 /* --------------------------------------------------------------------------------------------- */
