--- a/001. HTML학습/03.Robot_PJ/css/robot.css
+++ b/001. HTML학습/03.Robot_PJ/css/robot.css
@@ -77,7 +77,6 @@ body *{
     border-radius: 50%;
     border: 4px double #000;
     top: 50px;
-    
 }
 /* 왼눈 */
 .eye1{
@@ -121,6 +120,80 @@ body *{
     
 }
 
+/* 2-1-2.몸통 */
+.body{
+    /* 부모자격 */
+    position: relative;
+    width: 220px;
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-repeat: repeat;
+    background-size: 50%;
+}
+/* 목 */
+.neck{
+    position: absolute;
+    top: -50px;
+    /* 가로,세로 중앙보내기 계산법
+        top : calc(50% - 크기(height)/2);
+        left : calc(50% - 크기(width)/2);
+        ->크기는 left일 경우 width값이고 top일 경우 height값이다.
+    */
+    left: calc(50% - 50px/2);
+    width: 50px;
+    height: 50px;
+}
+/* 팔 공통 */
+.arm{
+    /* 부모 = body */
+    position: absolute;
+    top: 0;
+    width: 50px;
+    height: 180px;
+}
+/* 팔하단 공통 */
+.arm span{
+    /* 부모 = .arm */
+    position: absolute;
+    top: 100%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+}
+/* 왼팔 */
+.arm1{
+    left: -50px;
+}
+/* 오른팔 */
+.arm2{
+    right: -50px;
+}
 
+/* 다리 공통 */
+.leg{
+    /* 부모 = body */
+    position: absolute;
+    top: 100%;
+    width: 70px;
+    height: 200px;
+}
+/* 다리하단 공통 */
+.leg span{
+    /* 부모 = .leg */
+    position: absolute;
+    top: 100%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+}
+/* 왼다리 */
+.leg1{
+    left: 0px;
+}
+/* 오른다리 */
+.leg2{
+    right: 0px;
+}
 
 /********************* 3. 하단영역 *********************/
