--- a/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/css/main.css
@@ -16,6 +16,9 @@ html,body,h1,h2,ul,ol{
     margin: 0;
     padding: 0;
 }
+ul,ol{
+    list-style: none;
+}
 body{
     background-color: #000;
 }
@@ -64,6 +67,33 @@ body *{
     width: 100%;
     height: 100%;
     border: none;
+}
+/* 포스터 메뉴 */
+.poster-menu{
+    /* 한번에 메인영역 하단으로 위치이동 포지셔닝 */
+    /* 부모는 .main-area */
+    position: absolute;
+    bottom: 50px;
+    margin-left: 214px;
+}
+/* 포스터 ul */
+.poster-menu ul::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+/* 리스트 사이간격 */
+.poster-menu li+li{
+    margin-left: 15px;
+}
+/* 포스터 리스트 */
+.poster-menu li{
+    float: left;
+}
+/* 포스터이미지 */
+.poster-menu img{
+    /* width: 100px; */
+    height: 170px;
 }
 /********************************* 3.하단영역 *********************************/
 .footer-area{
