--- a/001. HTML학습/03.Robot_PJ/css/robot.css
+++ b/001. HTML학습/03.Robot_PJ/css/robot.css
@@ -131,6 +131,30 @@ body *{
     background-repeat: repeat;
     background-size: 50%;
 }
+/* 몸통 가상요소로 상의만들기 */
+.body::before{
+    content: "";
+    position: absolute;
+    /* 부모는? .body */
+    top: 0;
+    left: -5%;
+    width: 110%;
+    height: 55%;
+    background-image: linear-gradient(to bottom, #7dffad, #05a31c);
+    border-radius: 10px;
+}
+/* 몸통 가상요소로 하의 만들기 */
+.body::after {
+    content: "";
+    position: absolute;
+    /* 부모는? .body */
+    bottom: 0;
+    left: -5%;
+    width: 110%;
+    height: 35%;
+    background-image: linear-gradient(to bottom, #ff93f8, #a30583);
+    border-radius: 10px;
+  }
 /* 목 */
 .neck{
     position: absolute;
@@ -152,6 +176,44 @@ body *{
     width: 50px;
     height: 180px;
 }
+/* 팔 원형관절 가상요소 공통 */
+/* 큰원 */
+.arm::before {
+    content: "";
+    position: absolute;
+    /* 부모는? .arm */
+    top: calc(100% - 50px / 2);
+    left: 0;
+    width: 50px;
+    height: 50px;
+    z-index: 1;
+  
+    border-radius: 50%;
+    border: 2px solid #000;
+    background-color: #ccc;
+    /* 보더때문에 박스가 커지므로
+      패딩,보더 포함박스설정하기 */
+    box-sizing: border-box;
+  }
+  /* 작은원 */
+  .arm::after {
+    content: "";
+    position: absolute;
+    /* 부모는? .arm */
+    top: calc(100% - 40px / 2);
+    /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
+    left: calc(50% - 40px / 2);
+    /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
+    width: 40px;
+    height: 40px;
+    z-index: 1;
+  
+    border-radius: 50%;
+    /* 그라데이션 배경 */
+    background-image: linear-gradient(to bottom, #ccc, #222);
+    /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
+    box-shadow: inset 0 0 5px #222;
+  }
 /* 팔하단 공통 */
 .arm span{
     /* 부모 = .arm */
@@ -161,6 +223,35 @@ body *{
     width: 80%;
     height: 80%;
 }
+/* 팔하단 가상요소 손만들기 공통 */
+.arm span::after {
+    content: "";
+    position: absolute;
+    /* 부모는? span */
+    top: 100%;
+    width: 80px;
+    height: 110px;
+    /* outline: 2px dotted lime; */
+    /* 배경공통 */
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+
+  /* 왼손 */
+  .arm1 span::after {
+    /* 배경이미지경로 */
+    background-image: url(../images/hand_left.png);
+    /* left위치값 */
+    left: -12px;
+  }
+  /* 오른손 */
+  .arm2 span::after {
+    /* 배경이미지경로 */
+    background-image: url(../images/hand_right.png);
+    /* left위치값 */
+    left: -25px;
+  }
+
 /* 왼팔 */
 .arm1{
     left: -50px;
@@ -178,6 +269,45 @@ body *{
     width: 70px;
     height: 200px;
 }
+/* 다리 사각형관절 가상요소 공통 */
+/* 큰사각 */
+.leg::before {
+    content: "";
+    position: absolute;
+    /* 부모는? .leg */
+    top: calc(100% - 50px / 2);
+    left: 0;
+    width: 70px;
+    height: 50px;
+    z-index: 1;
+  
+    border-radius: 20px;
+    border: 2px solid #000;
+    background-color: #ccc;
+    /* 보더때문에 박스가 커지므로
+      패딩,보더 포함박스설정하기 */
+    box-sizing: border-box;
+  }
+  /* 작은사각 */
+  .leg::after {
+    content: "";
+    position: absolute;
+    /* 부모는? .leg */
+    top: calc(100% - 40px / 2);
+    /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
+    left: calc(50% - 60px / 2);
+    /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
+    width: 60px;
+    height: 40px;
+    z-index: 1;
+  
+    border-radius: 20px;
+    /* 그라데이션 배경 */
+    background-image: linear-gradient(to bottom, #ccc, #222);
+    /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
+    box-shadow: inset 0 0 5px #222;
+  }
+
 /* 다리하단 공통 */
 .leg span{
     /* 부모 = .leg */
@@ -187,6 +317,41 @@ body *{
     width: 80%;
     height: 80%;
 }
+/* 다리하단 가상요소 부츠만들기 공통 */
+/* 부츠상단 */
+.leg span::before {
+    content: "";
+    position: absolute;
+    /* 부모는? span */
+    top: 60%;
+    left: -10%;
+    width: 120%;
+    height: 120%;
+    /* 배경 그라데이션 */
+    background-image: linear-gradient(to right, #ccc, #222);
+    border: 5px solid #000;
+    border-top-width: 20px;
+    /* 보더,패딩 포함박스 */
+    box-sizing: border-box;
+  }
+  /* 부츠하단 */
+  .leg span::after {
+    content: "";
+    position: absolute;
+    /* 부모는? span */
+    top: 160%;
+    left: -30%;
+    width: 160%;
+    height: 40%;
+    /* 배경 그라데이션 */
+    background-image: linear-gradient(85deg, #ccc, #222);
+    border: 5px solid #000;
+    border-bottom-width: 20px;
+    border-radius: 40px 40px 0 0;
+    /* 보더,패딩 포함박스 */
+    box-sizing: border-box;
+  }
+
 /* 왼다리 */
 .leg1{
     left: 0px;
@@ -195,5 +360,55 @@ body *{
 .leg2{
     right: 0px;
 }
+/* 어깨공통 */
+.shdr {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+}
+/* 왼어깨 */
+.shdr1 {
+  left: -81px;
+  /* 둥근모서리 */
+  border-radius: 30px 0 0 30px;
+}
+/* 오른어깨 */
+.shdr2 {
+  right: -81px;
+  /* 둥근모서리 */
+  border-radius: 0 30px 30px 0;
+}
+
+/* TV */
+.tv {
+    position: absolute;
+    top: 22px;
+    left: 22px;
+    width: 178px;
+    height: 136px;
+    background: url(../images/tv.jpg) no-repeat 0/100% 100%;
+  }
+  /* 스크린 */
+  .screen {
+    position: absolute;
+    /* 부모는? .tv */
+    top: 16px;
+    left: 10px;
+    width: 122px;
+    height: 90px;
+    /* border: 2px dashed blue; */
+    border-radius: 10px;
+    /* 자식유튜브 아이프레임 넘치는부분 숨기기 */
+    overflow: hidden;
+  }
+  /* 유튭 아이프레임 */
+  .screen iframe {
+    position: absolute;
+    /* 부모는? .screen */
+    top: -5px;
+    left: -29px;
+    width: 182px;
+    height: 101px;
+  }
 
 /********************* 3. 하단영역 *********************/
