--- a/001. HTML학습/03.Robot_PJ/css/robot.css
+++ b/001. HTML학습/03.Robot_PJ/css/robot.css
@@ -3,7 +3,7 @@
 /* Robot PJ 메인 CSS - robot.css */
 
 /* 웹폰트 CDN */
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Black+Ops+One&family=Chakra+Petch&family=Orbitron:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Black+Ops+One&family=Chakra+Petch&family=Orbitron:wght@500&display=swap");
 
 /* 
     font-family: 'Barlow', sans-serif;
@@ -12,7 +12,7 @@
     font-family: 'Orbitron', sans-serif;
 */
 
-        /* 가지고있는 폰트
+/* 가지고있는 폰트
           font-family: "Black And White Picture", system-ui;
           font-family: "Black Han Sans", sans-serif;
           font-family: "Noto Sans KR", sans-serif;
@@ -20,345 +20,363 @@
         */
 
 /* 초기화 */
-html,body,h1,h2,h3,ul,ol{
-    margin: 0;
-    padding: 0;
+html,
+body,
+h1,
+h2,
+h3,
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+/* html 루트설정 */
+html {
+  font-size: 10px;
 }
 /* 배경이미지 */
-body{
-    background: url(../images/bg.jpg) no-repeat fixed top/cover;
+body {
+  background: url(../images/bg.jpg) no-repeat fixed top/cover;
 }
 /* 공사중 표시 */
-body *{
-    outline: 2px dashed yellow;
+body * {
+  outline: 2px dashed yellow;
 }
 
 /* 공통클래스 */
 
 /********************* 공통클래스 *********************/
 /* 메탈배경 클래스 */
-.metal1{
-    background: url(../images/metal01.jpg) no-repeat center/cover;
+.metal1 {
+  background: url(../images/metal01.jpg) no-repeat center/cover;
 }
-.metal2{
-    background: url(../images/metal02.jpg) no-repeat center/cover;
+.metal2 {
+  background: url(../images/metal02.jpg) no-repeat center/cover;
 }
-
-
 
 /********************* 1. 상단영역 *********************/
 
-
-
 /********************* 2. 메인영역 *********************/
 /* 2-1.로봇박스 */
-.robot-box{
-
+.robot-box {
+  padding-top: 200px;
+  margin-bottom: 560px;
 }
 /* 2-1-1.머리 */
-.head{
-    width: 250px;
-    height: 250px;
-    /* 부모자격 - eye의 부모 */
-    position: relative;
-    margin: 0 auto;
-    border-radius: 90px 90px 30px 30px;
+.head {
+  width: 250px;
+  height: 250px;
+  /* 부모자격 - eye의 부모 */
+  position: relative;
+  margin: 0 auto;
+  border-radius: 90px 90px 30px 30px;
+}
+/* 로봇머리 가상요소로 가발만들기 */
+.head::after {
+  content: "";
+  position: absolute;
+  /* 부모는? .head */
+  top: -86px;
+  left: -82px;
+  width: 412px;
+  height: 422px;
+  background: url(../images/hair2.png) no-repeat 0/100% 100%;
+  filter: hue-rotate(0deg);
 }
 /* 눈 공통 */
-.eye{
-    /* 부모는 .head */
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    /* 배경공통 */
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-color: #fff;
-    border-radius: 50%;
-    border: 4px double #000;
-    top: 50px;
+.eye {
+  /* 부모는 .head */
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  /* 배경공통 */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 4px double #000;
+  top: 50px;
 }
 /* 왼눈 */
-.eye1{
-    left: 50px;
-    background-image: url(../images/e1.jpg);
+.eye1 {
+  left: 50px;
+  background-image: url(../images/e1.jpg);
 }
-.eye2{
-    right: 50px;
-    background-image: url(../images/e2.jpg);
+.eye2 {
+  right: 50px;
+  background-image: url(../images/e2.jpg);
 }
-.nose{
-    position: absolute;
-    width: 50px;
-    height: 70px;
-    top: 101px;
-    left: 101px;
-    background: url(../images/nose.jpg) no-repeat -7px/cover;
-    border-radius: 20px;
+.nose {
+  position: absolute;
+  width: 50px;
+  height: 70px;
+  top: 101px;
+  left: 101px;
+  background: url(../images/nose.jpg) no-repeat -7px / cover;
+  border-radius: 20px;
 }
-.mouth{
-    position: absolute;
-    width: 120px;
-    height: 50px;
-    top: 176px;
-    left: 66px;
-    background: url(../images/mouth.png) no-repeat center/cover;
+.mouth {
+  position: absolute;
+  width: 120px;
+  height: 50px;
+  top: 176px;
+  left: 66px;
+  background: url(../images/mouth.png) no-repeat center/cover;
 }
-.ear{
-    position: absolute;
-    top: 90px;
-    width: 60px;
-    height: 90px;
+.ear {
+  position: absolute;
+  top: 90px;
+  width: 60px;
+  height: 90px;
 }
-.ear1{
-    left: -60px;
-    border-radius: 20px 0 0 20px;
+.ear1 {
+  left: -60px;
+  border-radius: 20px 0 0 20px;
 }
-.ear2{
-    right: -60px;
-    border-radius: 0 20px 20px 0;
-    
+.ear2 {
+  right: -60px;
+  border-radius: 0 20px 20px 0;
 }
 
 /* 2-1-2.몸통 */
-.body{
-    /* 부모자격 */
-    position: relative;
-    width: 220px;
-    height: 400px;
-    margin: 0 auto;
-    margin-top: 50px;
-    background-repeat: repeat;
-    background-size: 50%;
+.body {
+  /* 부모자격 */
+  position: relative;
+  width: 220px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  /* background-repeat: repeat; */
+  background-size: 80%;
 }
 /* 몸통 가상요소로 상의만들기 */
-.body::before{
-    content: "";
-    position: absolute;
-    /* 부모는? .body */
-    top: 0;
-    left: -5%;
-    width: 110%;
-    height: 55%;
-    background-image: linear-gradient(to bottom, #7dffad, #05a31c);
-    border-radius: 10px;
+.body::before {
+  content: "";
+  position: absolute;
+  /* 부모는? .body */
+  top: 0;
+  left: -5%;
+  width: 110%;
+  height: 55%;
+  background-image: linear-gradient(to bottom, #7dffad, #05a31c);
+  border-radius: 10px 10px 30% 30%;
 }
 /* 몸통 가상요소로 하의 만들기 */
 .body::after {
-    content: "";
-    position: absolute;
-    /* 부모는? .body */
-    bottom: 0;
-    left: -5%;
-    width: 110%;
-    height: 35%;
-    background-image: linear-gradient(to bottom, #ff93f8, #a30583);
-    border-radius: 10px;
-  }
+  content: "";
+  position: absolute;
+  /* 부모는? .body */
+  bottom: 0;
+  left: -5%;
+  width: 110%;
+  height: 35%;
+  background-image: linear-gradient(to bottom, #ff93f8, #a30583);
+  border-radius: 10px 10px 30% 30%;
+}
 /* 목 */
-.neck{
-    position: absolute;
-    top: -50px;
-    /* 가로,세로 중앙보내기 계산법
+.neck {
+  position: absolute;
+  top: -50px;
+  /* 가로,세로 중앙보내기 계산법
         top : calc(50% - 크기(height)/2);
         left : calc(50% - 크기(width)/2);
         ->크기는 left일 경우 width값이고 top일 경우 height값이다.
     */
-    left: calc(50% - 50px/2);
-    width: 50px;
-    height: 50px;
+  left: calc(50% - 50px / 2);
+  width: 50px;
+  height: 50px;
 }
 /* 팔 공통 */
-.arm{
-    /* 부모 = body */
-    position: absolute;
-    top: 0;
-    width: 50px;
-    height: 180px;
+.arm {
+  /* 부모 = body */
+  position: absolute;
+  top: 0;
+  width: 50px;
+  height: 180px;
 }
 /* 팔 원형관절 가상요소 공통 */
 /* 큰원 */
 .arm::before {
-    content: "";
-    position: absolute;
-    /* 부모는? .arm */
-    top: calc(100% - 50px / 2);
-    left: 0;
-    width: 50px;
-    height: 50px;
-    z-index: 1;
-  
-    border-radius: 50%;
-    border: 2px solid #000;
-    background-color: #ccc;
-    /* 보더때문에 박스가 커지므로
+  content: "";
+  position: absolute;
+  /* 부모는? .arm */
+  top: calc(100% - 50px / 2);
+  left: 0;
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+
+  border-radius: 50%;
+  border: 2px solid #000;
+  background-color: #ccc;
+  /* 보더때문에 박스가 커지므로
       패딩,보더 포함박스설정하기 */
-    box-sizing: border-box;
-  }
-  /* 작은원 */
-  .arm::after {
-    content: "";
-    position: absolute;
-    /* 부모는? .arm */
-    top: calc(100% - 40px / 2);
-    /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
-    left: calc(50% - 40px / 2);
-    /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
-    width: 40px;
-    height: 40px;
-    z-index: 1;
-  
-    border-radius: 50%;
-    /* 그라데이션 배경 */
-    background-image: linear-gradient(to bottom, #ccc, #222);
-    /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
-    box-shadow: inset 0 0 5px #222;
-  }
+  box-sizing: border-box;
+}
+/* 작은원 */
+.arm::after {
+  content: "";
+  position: absolute;
+  /* 부모는? .arm */
+  top: calc(100% - 40px / 2);
+  /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
+  left: calc(50% - 40px / 2);
+  /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+
+  border-radius: 50%;
+  /* 그라데이션 배경 */
+  background-image: linear-gradient(to bottom, #ccc, #222);
+  /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
+  box-shadow: inset 0 0 5px #222;
+}
 /* 팔하단 공통 */
-.arm span{
-    /* 부모 = .arm */
-    position: absolute;
-    top: 100%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
+.arm span {
+  /* 부모 = .arm */
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
 }
 /* 팔하단 가상요소 손만들기 공통 */
 .arm span::after {
-    content: "";
-    position: absolute;
-    /* 부모는? span */
-    top: 100%;
-    width: 80px;
-    height: 110px;
-    /* outline: 2px dotted lime; */
-    /* 배경공통 */
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
+  content: "";
+  position: absolute;
+  /* 부모는? span */
+  top: 100%;
+  width: 80px;
+  height: 110px;
+  /* outline: 2px dotted lime; */
+  /* 배경공통 */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
 
-  /* 왼손 */
-  .arm1 span::after {
-    /* 배경이미지경로 */
-    background-image: url(../images/hand_left.png);
-    /* left위치값 */
-    left: -12px;
-  }
-  /* 오른손 */
-  .arm2 span::after {
-    /* 배경이미지경로 */
-    background-image: url(../images/hand_right.png);
-    /* left위치값 */
-    left: -25px;
-  }
+/* 왼손 */
+.arm1 span::after {
+  /* 배경이미지경로 */
+  background-image: url(../images/hand_left.png);
+  /* left위치값 */
+  left: -12px;
+}
+/* 오른손 */
+.arm2 span::after {
+  /* 배경이미지경로 */
+  background-image: url(../images/hand_right.png);
+  /* left위치값 */
+  left: -25px;
+}
 
 /* 왼팔 */
-.arm1{
-    left: -50px;
+.arm1 {
+  left: -50px;
 }
 /* 오른팔 */
-.arm2{
-    right: -50px;
+.arm2 {
+  right: -50px;
 }
 
 /* 다리 공통 */
-.leg{
-    /* 부모 = body */
-    position: absolute;
-    top: 100%;
-    width: 70px;
-    height: 200px;
+.leg {
+  /* 부모 = body */
+  position: absolute;
+  top: 100%;
+  width: 70px;
+  height: 200px;
 }
 /* 다리 사각형관절 가상요소 공통 */
 /* 큰사각 */
 .leg::before {
-    content: "";
-    position: absolute;
-    /* 부모는? .leg */
-    top: calc(100% - 50px / 2);
-    left: 0;
-    width: 70px;
-    height: 50px;
-    z-index: 1;
-  
-    border-radius: 20px;
-    border: 2px solid #000;
-    background-color: #ccc;
-    /* 보더때문에 박스가 커지므로
+  content: "";
+  position: absolute;
+  /* 부모는? .leg */
+  top: calc(100% - 50px / 2);
+  left: 0;
+  width: 70px;
+  height: 50px;
+  z-index: 1;
+
+  border-radius: 20px;
+  border: 2px solid #000;
+  background-color: #ccc;
+  /* 보더때문에 박스가 커지므로
       패딩,보더 포함박스설정하기 */
-    box-sizing: border-box;
-  }
-  /* 작은사각 */
-  .leg::after {
-    content: "";
-    position: absolute;
-    /* 부모는? .leg */
-    top: calc(100% - 40px / 2);
-    /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
-    left: calc(50% - 60px / 2);
-    /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
-    width: 60px;
-    height: 40px;
-    z-index: 1;
-  
-    border-radius: 20px;
-    /* 그라데이션 배경 */
-    background-image: linear-gradient(to bottom, #ccc, #222);
-    /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
-    box-shadow: inset 0 0 5px #222;
-  }
+  box-sizing: border-box;
+}
+/* 작은사각 */
+.leg::after {
+  content: "";
+  position: absolute;
+  /* 부모는? .leg */
+  top: calc(100% - 40px / 2);
+  /* 부모박스 바깥으로 모두 밀고 원크기 절반 빼기 */
+  left: calc(50% - 60px / 2);
+  /* 부모박스 절반만큼 밀고 원크기 절반 빼기(가로중앙) */
+  width: 60px;
+  height: 40px;
+  z-index: 1;
+
+  border-radius: 20px;
+  /* 그라데이션 배경 */
+  background-image: linear-gradient(to bottom, #ccc, #222);
+  /* 박스 내부그림자 : bsh -> inset 키워드(내부그림자) */
+  box-shadow: inset 0 0 5px #222;
+}
 
 /* 다리하단 공통 */
-.leg span{
-    /* 부모 = .leg */
-    position: absolute;
-    top: 100%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
+.leg span {
+  /* 부모 = .leg */
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
 }
 /* 다리하단 가상요소 부츠만들기 공통 */
 /* 부츠상단 */
 .leg span::before {
-    content: "";
-    position: absolute;
-    /* 부모는? span */
-    top: 60%;
-    left: -10%;
-    width: 120%;
-    height: 120%;
-    /* 배경 그라데이션 */
-    background-image: linear-gradient(to right, #ccc, #222);
-    border: 5px solid #000;
-    border-top-width: 20px;
-    /* 보더,패딩 포함박스 */
-    box-sizing: border-box;
-  }
-  /* 부츠하단 */
-  .leg span::after {
-    content: "";
-    position: absolute;
-    /* 부모는? span */
-    top: 160%;
-    left: -30%;
-    width: 160%;
-    height: 40%;
-    /* 배경 그라데이션 */
-    background-image: linear-gradient(85deg, #ccc, #222);
-    border: 5px solid #000;
-    border-bottom-width: 20px;
-    border-radius: 40px 40px 0 0;
-    /* 보더,패딩 포함박스 */
-    box-sizing: border-box;
-  }
+  content: "";
+  position: absolute;
+  /* 부모는? span */
+  top: 60%;
+  left: -10%;
+  width: 120%;
+  height: 120%;
+  /* 배경 그라데이션 */
+  background-image: linear-gradient(to right, #ccc, #222);
+  border: 5px solid #000;
+  border-top-width: 20px;
+  /* 보더,패딩 포함박스 */
+  box-sizing: border-box;
+}
+/* 부츠하단 */
+.leg span::after {
+  content: "";
+  position: absolute;
+  /* 부모는? span */
+  top: 160%;
+  left: -30%;
+  width: 160%;
+  height: 40%;
+  /* 배경 그라데이션 */
+  background-image: linear-gradient(85deg, #ccc, #222);
+  border: 5px solid #000;
+  border-bottom-width: 20px;
+  border-radius: 40px 40px 0 0;
+  /* 보더,패딩 포함박스 */
+  box-sizing: border-box;
+}
 
 /* 왼다리 */
-.leg1{
-    left: 0px;
+.leg1 {
+  left: 0px;
 }
 /* 오른다리 */
-.leg2{
-    right: 0px;
+.leg2 {
+  right: 0px;
 }
 /* 어깨공통 */
 .shdr {
@@ -381,34 +399,134 @@ body *{
 
 /* TV */
 .tv {
-    position: absolute;
-    top: 22px;
-    left: 22px;
-    width: 178px;
-    height: 136px;
-    background: url(../images/tv.jpg) no-repeat 0/100% 100%;
-  }
-  /* 스크린 */
-  .screen {
-    position: absolute;
-    /* 부모는? .tv */
-    top: 16px;
-    left: 10px;
-    width: 122px;
-    height: 90px;
-    /* border: 2px dashed blue; */
-    border-radius: 10px;
-    /* 자식유튜브 아이프레임 넘치는부분 숨기기 */
-    overflow: hidden;
-  }
-  /* 유튭 아이프레임 */
-  .screen iframe {
-    position: absolute;
-    /* 부모는? .screen */
-    top: -5px;
-    left: -29px;
-    width: 182px;
-    height: 101px;
-  }
+  position: absolute;
+  top: 22px;
+  left: 22px;
+  width: 178px;
+  height: 136px;
+  background: url(../images/tv.jpg) no-repeat 0/100% 100%;
+}
+/* 스크린 */
+.screen {
+  position: absolute;
+  /* 부모는? .tv */
+  top: 16px;
+  left: 10px;
+  width: 122px;
+  height: 90px;
+  /* border: 2px dashed blue; */
+  border-radius: 10px;
+  /* 자식유튜브 아이프레임 넘치는부분 숨기기 */
+  overflow: hidden;
+}
+/* 유튭 아이프레임 */
+.screen iframe {
+  position: absolute;
+  /* 부모는? .screen */
+  top: -5px;
+  left: -29px;
+  width: 182px;
+  height: 101px;
+}
+
+/* 2-2.로봇설명박스 */
+.text-box {
+  max-width: 800px;
+  margin: 0 auto;
+  color: white;
+  padding: 15px 30px;
+  background-color: #00000045;
+  border-radius: 20px;
+  /* 박스 내부그림자 */
+  box-shadow: inset 0 0 20px darkblue, inset 0 0 50px 10px purple;
+
+  /* 
+  [백드롭 필터효과]
+  - filter속성과 동일한 세팅을 가지며 적용대상이 겹쳐지는 하단의 그래픽을 변경한다.
+
+   <filter-function> 값
+    흐림 : backdrop-filter: blur(2px);
+    밝기 : backdrop-filter: brightness(60%);
+    대비 : backdrop-filter: contrast(40%);
+    그림자 : backdrop-filter: drop-shadow(4px 4px 10px blue);
+    흑백 : backdrop-filter: grayscale(30%);
+    색상변경 : backdrop-filter: hue-rotate(120deg);
+    반전 : backdrop-filter: invert(70%);
+    투명도 : backdrop-filter: opacity(20%);
+    세피아 : backdrop-filter: sepia(90%);
+    채도 : backdrop-filter: saturate(80%);
+
+  다중 필터 (복합적용 가능)
+    backdrop-filter: blur(4px) saturate(150%); */
+
+  backdrop-filter: blur(5px);
+}
+
+/* 2-2-1.제목 */
+.text-box h2 {
+  font-size: 3.5rem;
+  text-align: center;
+  padding: 10px;
+  color: lime;
+  text-shadow: 2px 2px 2px #000000c5;
+  background-color: #ffffff9b;
+  border-radius: 20px;
+  font-family: "Chakra Petch", sans-serif;
+  /* 얇은글자 */
+  font-weight: normal;
+  position: sticky;
+  top: 10px;
+}
+/* 2-2-2.출처 */
+.text-box small {
+  display: block;
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 10px;
+  color: yellow;
+  text-shadow: 1px 1px 1px #000000c5;
+  font-family: "Chakra Petch", sans-serif;
+  /* 얇은글자 */
+  font-weight: normal;
+}
+
+/* 2-2-3.본문 */
+.text-box p {
+  font-size: 1.7rem;
+  font-family: "Barlow", sans-serif;
+  /* 줄간격 */
+  line-height: 1.7;
+  /* 자간 */
+  letter-spacing: 1px;
+  /* 단어간격 */
+  word-spacing: 2px;
+
+  /* 
+    [다단 설정하기]
+    -다중열속성
+    -> colum-count: 다중열개수
+    -> colum-rule: 두깨 종류 색상 - 다중열구분선
+    -> colum-gap: 다중열사이간격
+    */
+  column-count: 3;
+  column-rule: 5px dotted lightgreen;
+  column-gap: 55px;
+
+  /* 양쪽정렬 */
+  text-align: justify;
+  /* 영문자는 단어를 깨줘야함 */
+  word-break: break-all;
+
+  /* 첫줄 들여쓰기 */
+  text-indent: 30px;
+
+}
+
+/* 가상요소 첫글자 변경하기 */
+.text-box p::first-letter {
+  color: lime;
+  font-size: 3rem;
+  font-weight: bold;
+}
 
 /********************* 3. 하단영역 *********************/
