--- a/001. HTML학습/03.Robot_PJ/css/robot.css
+++ b/001. HTML학습/03.Robot_PJ/css/robot.css
@@ -55,6 +55,26 @@ body * {
 }
 
 /********************* 1. 상단영역 *********************/
+.logo{
+  position: fixed;
+  top: calc(50% - 20vw/2);
+  left: calc(50% - 20vw/2);
+  z-index: 1;
+  width: 20vw;
+  height: 20vw;
+  border-radius: 50%;
+  background: pink url(../images/robot_03.png) no-repeat center/auto 100%;
+  box-shadow: inset 0 0 20px 5px rgb(139, 0, 130),
+  0 0 20px 5px rgb(139, 137, 0);
+
+  text-align: center;
+  line-height: 20vw;
+  color: aqua;
+  font-size: 4.5vw;
+  font-family: 'Orbitron', sans-serif;
+  text-shadow: 0 0 10px #2a66e9;
+  
+}
 
 /********************* 2. 메인영역 *********************/
 /* 2-1.로봇박스 */
