--- a/001. HTML학습/03.Robot_PJ/css/robot.css
+++ b/001. HTML학습/03.Robot_PJ/css/robot.css
@@ -36,6 +36,7 @@ html {
 }
 /* 배경이미지 */
 body {
+  padding-top:100vh;
   background: url(../images/bg.jpg) no-repeat fixed top/cover;
 }
 /* 공사중 표시 */
@@ -78,9 +79,13 @@ body * {
 /********************* 2. 메인영역 *********************/
 /* 2-1.로봇박스 */
 .robot-box {
-  padding-top: 200px;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: scale(.3) translate(350%, 43%);
+  /* padding-top: 200px; */
   margin-bottom: 560px;
-}
+  }
 /* 2-1-1.머리 */
 .head {
   width: 250px;
