--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -13,3 +13,36 @@ h1.tit {
     text-align: center;
     padding: 20px;
 }
+
+/* 전체body */
+body{
+    color: #fff;
+    background: rgb(7 17 75) url(../images/nav1bg.png) no-repeat fixed center/cover;
+}
+
+/* ul,ol초기화 */
+ul,ol{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+/* 공통 a요소 */
+a{
+    color: #fff;
+    text-decoration: none;
+}
+
+/* 공통 클래스 : 클리어 */
+ul::after, ol::after,.clb{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+/* 중앙속박스 */
+.inbox{
+    max-width: 1650px;
+    margin: 0 auto;
+    outline: 2px dashed lime;
+}
