메뉴만드는중

--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -46,3 +46,10 @@ ul::after, ol::after,.clb{
     margin: 0 auto;
     outline: 2px dashed lime;
 }
+
+/* gnb메뉴 */
+.gnb li{
+    float: left;
+    line-height: 78px;
+    padding: 0px 32px;
+}
