--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
 /* 네비게이션 유형1 CSS - nav01.css */
-
+/* 12그리드 불러오기 */
+@import url(./grid_12_float.css);
 
 html,
 body,
@@ -52,4 +53,15 @@ ul::after, ol::after,.clb{
     float: left;
     line-height: 78px;
     padding: 0px 32px;
+}
+
+/* 메인영역 */
+.main-area {
+    max-width: 1000px;
+    min-height: 600px;
+    line-height: 600px;
+    text-align: center;
+    font-size: 2.5vw;
+    border: 10px dashed lightgreen;
+    margin: 100px auto;
 }
