네비게이션 만들기
중간에 나는 컨텐트박스가 그냥 올라와있는데 쩝..........암튼 됐으니까 오케이

--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -35,7 +35,7 @@ a{
 }
 
 /* 공통 클래스 : 클리어 */
-ul::after, ol::after,.clb{
+ul::after, ol::after, .clb{
     content: '';
     display: block;
     clear: both;
@@ -48,12 +48,58 @@ ul::after, ol::after,.clb{
     outline: 2px dashed lime;
 }
 
-/* gnb메뉴 */
-.gnb li{
-    float: left;
-    line-height: 78px;
-    padding: 0px 32px;
+/* 로고 */
+.logo{
+    padding: 13px 0;
 }
+
+/* gnb메뉴 */
+.gnb{
+    margin-left: 63px;
+}
+/* 상위메뉴만 적용하기 */
+.gnb ul>li{
+    /* smenu left값 - 부모자격 */
+    position: relative;
+    float: left;
+    padding: 0px 32px;
+    /* 글자관련 셋팅은 하위요소로 상속됨 */
+    line-height: 78px;
+    font-weight: bold;
+}
+
+/* 서브메뉴 */
+.smenu{
+    position: absolute;
+    left: 50%;
+    /* X축 중앙이동 */
+    transform: translateX(-50%);
+
+    width: 200px;
+    background-color: #00000071;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 38px;
+    
+    /* 패딩이 있으면 높이값0 숨기기가 안됨 그래서 하위요소인 ol태그에 패딩줌 */
+    /* padding: 5px; */
+
+    /* 숨기기장치 */
+    height: 0;
+    overflow: hidden;
+
+    /* 트랜지션 */
+    transition: height 0.4s;
+}
+
+/* 상위 li오버시 서브메뉴 보이기 */
+.gnb ul>li:hover .smenu{
+    height: 210px;
+}
+.smenu ol{
+    padding: 10px;
+}
+
 
 /* 메인영역 */
 .main-area {
