--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -57,6 +57,12 @@ ul::after, ol::after, .clb{
 .gnb{
     margin-left: 63px;
 }
+
+/* gnb메뉴 하위 a요소 */
+.gnb a{
+    display: block;
+}
+
 /* 상위메뉴만 적용하기 */
 .gnb ul>li{
     /* smenu left값 - 부모자격 */
@@ -76,29 +82,103 @@ ul::after, ol::after, .clb{
     transform: translateX(-50%);
 
     width: 200px;
-    background-color: #00000071;
+    background-color: #0000003f;
     border-radius: 10px;
+    box-shadow: inset 0 0 10px lightpink;
+
     text-align: center;
     line-height: 38px;
+
+    font-weight: normal;
     
     /* 패딩이 있으면 높이값0 숨기기가 안됨 그래서 하위요소인 ol태그에 패딩줌 */
     /* padding: 5px; */
 
     /* 숨기기장치 */
-    height: 0;
+    /* height: 0; */
+    max-height: 0;
     overflow: hidden;
 
     /* 트랜지션 */
-    transition: height 0.4s;
+    transition: max-height 0.4s;
+    
 }
 
 /* 상위 li오버시 서브메뉴 보이기 */
 .gnb ul>li:hover .smenu{
-    height: 210px;
+    /* max-height로 세팅하는 원리는
+    최대높이값은 컨텐츠내용이 적을 때 auto하게 내용물만큼만 높이값이 세팅됨
+    따라서 세팅 높이값은 최대로 세팅해야하는 높이값으로 적용해야함.
+    (단, 작은 크기는 시간이 짧게 표현됨)
+    
+    max로할거면 트렌지션도 max로! 바꾸거나 all로 해야함*/
+    max-height: 210px;
+
+    /* height: 210px; */
+    /* height: auto; */
+    /* 
+     높이값 변경 트랜지션 주의사항
+        -> auto로 셋팅하면 특정 크기로 변경할 때만 적용되는 트랜지션이 적용되지 않음
+        height 셋팅시에는 변할 실제 크기를 셋팅해야함
+            -> 각 상위 li별로 높이값을 각각 세팅해야하는 번거로움이 있음
+
+    */
 }
+
+/* 예기로 5번째 높이값 개별새팅 */
+/* .gnb ul>li:nth-child(5):hover .smenu{
+    height: 58px;
+} */
+
 .smenu ol{
     padding: 10px;
 }
+/* 서브메뉴 li 순서대로 나타나기 */
+.smenu li{
+    /* 투명하게 */
+    opacity: 0;
+    /* 트랜지션 */
+    transition: all .4s;
+    
+}
+
+/* *********************여기 잘 볼 것**************************** */
+/* 상위메뉴 오버시 */
+.gnb ul>li:hover .smenu li{
+    opacity: 1;
+}
+/* 하위 메뉴 a요소 opacity 조정 */
+.gnb ul>li .smenu a{
+    opacity: .5;
+}
+/* 하위 메뉴 a요소 opacity 조정 */
+.gnb ul>li .smenu a:hover{
+    font-weight: bold;
+    opacity: 1;
+}
+
+/* 하위 메뉴 오버시
+.gnb ul>li .smenu li:hover{
+    opacity: 1;
+    font-weight: bold;
+    transition: 0s !important;
+} */
+
+/* 오버시 li순서별 트랜지션 dealy주기 */
+.gnb ul>li:hover .smenu li:nth-child(2){
+    transition-delay: 0.2s;
+}
+.gnb ul>li:hover .smenu li:nth-child(3){
+    transition-delay: 0.3s;
+}
+.gnb ul>li:hover .smenu li:nth-child(4){
+    transition-delay: 0.4s;
+}
+.gnb ul>li:hover .smenu li:nth-child(5){
+    transition-delay: 0.5s;
+}
+
+
 
 
 /* 메인영역 */
