--- a/001. HTML학습/05.Nav_PJ/css/nav01.css
+++ b/001. HTML학습/05.Nav_PJ/css/nav01.css
@@ -38,7 +38,6 @@ a{
 ul::after, ol::after, .clb{
     content: '';
     display: block;
-    clear: both;
 }
 
 /* 중앙속박스 */
@@ -148,11 +147,11 @@ ul::after, ol::after, .clb{
     opacity: 1;
 }
 /* 하위 메뉴 a요소 opacity 조정 */
-.gnb ul>li .smenu a{
+.gnb ul>li .smenu li a{
     opacity: .5;
 }
 /* 하위 메뉴 a요소 opacity 조정 */
-.gnb ul>li .smenu a:hover{
+.gnb ul>li .smenu li a:hover{
     opacity: 1;
     font-weight: bold;
 }
@@ -172,8 +171,34 @@ ul::after, ol::after, .clb{
     transition-delay: 0.5s;
 }
 
+/* 가상요소를 위한 부모자격 */
+.gnb ul>li>a{
+    position: relative;
+}
 
+/* gnb상위메뉴 오버시 밑줄애니 */
+.gnb ul>li>a::after{
+    content: '';
+    position: absolute;
+    /* 마우스 나갈때 left값 밀기 */
+    left: 100%;
+    top: 53px;
 
+    width: 0;
+    height: 2px;
+
+    background-color: white;
+    /* 아웃시 트랜지션 */
+    transition: .3s;
+}
+
+/* 오버시 선나오게 */
+.gnb ul>li:hover>a::after{
+    left: 0;
+    width: 100%;
+    /* 오버시 트랜지션 ->> left는 트랜지션 적용XXX */
+    transition: width .3s;
+}
 
 /* 메인영역 */
 .main-area {
