--- a/002.CSS학습/05.3DAni/css/solar2d.css
+++ b/002.CSS학습/05.3DAni/css/solar2d.css
@@ -5,6 +5,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@900&display=swap');
 /* font-family: 'Big Shoulders Stencil Text', cursive; */
 
+/************************************************ 
+
+[ CSS에서 변수 사용하기 ]
+  1. 변수 설정하기
+    :root{
+        --변수명1 : 값;
+        --변수명2 : 값2;
+    }
+
+  2. 변수 호출하기
+    var(--변수명)
+
+  3. 변수는 언제 사용하나?
+    - 같은 값이 여러부분에서 사용될 때.
+    - 미디어 쿼리에서 변경이 필요한 경우 변수값만 변경하면 복잡한 값 변경이 불필요.
+    - 전역적으로 지정된 색상/값 등 프로젝트 내의 공유되는 값을 변수로 설정함.
+
+************************************************/
+
+/* 변수 설정 */
+:root{
+    /* 태양크기 */
+    --sun-size : 250px;
+    /* 지구크기 */
+    --earth-size : 80px;
+    /* 지구거리 */
+    --earth-trans-size : -250px;
+}
+
 /* 초기화 */
 html, body{
     margin: 0;
@@ -39,8 +68,8 @@ body *{
     left: 50%;
     transform: translate(-50%,-50%);
 
-    width: 250px;
-    height: 250px; 
+    width: var(--sun-size);
+    height: var(--sun-size); 
 }
 
 /* 태양박스 */
@@ -49,8 +78,8 @@ body *{
     top: 0;
     left: 0;
 
-    width: 250px;
-    height: 250px;
+    width: var(--sun-size);
+    height: var(--sun-size);
 
     overflow: hidden;
 
